--- a/Returns/.gitignore
+++ b/Returns/.gitignore
@@ -3,7 +3,7 @@ xcuserdata/
 *.xcuserstate
 *.xcscmblueprint
 *.xccheckout
-info.plist
+Info.plist
 
 # Environment variables
 Secrets.template.xconfig
